--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <p>キャラクターを選択</p>
       <div class="select-area">
         <select id="chara" class="select" size="8">
-          <option value="1st">カテナ</option>
+          <option value="1st" selected>カテナ</option>
           <option value="2nd">ジライ</option>
           <option value="3rd">歌姫</option>
           <option value="4th">メイ</option>
