--- a/index.html
+++ b/index.html
@@ -25,7 +25,22 @@
       <h1>キャラ紹介</h1>
       <hr />
       <h2>-ようこそ-</h2>
+<div class="sns-icons">
+  <a href="https://x.com/@SKY86749438" target="_blank">
+    <img src="images/x-icon.png" alt="X" class="sns-icon">
+  </a>
 
+  <a href="https://www.youtube.com/@mashumaro3939" target="_blank">
+    <img src="images/youtube-icon.png" alt="YouTube" class="sns-icon">
+  </a>
+</div>
+<div class="profile-card">
+  <img src="images/icon.png" class="profile-icon">
+  <div class="profile-text">
+    <h2>ましゅまろ</h2>
+    <p>こんにちは、ましゅまろです。 あなたの心臓を締めるようなマップ制作に邁進しています。ぜひご覧ください。(追記:ヒントや質問はXのDMに来て頂ければ返信しやすいです。)</p>
+  </div>
+</div>
       <div class="container">
         <p>
           ここではましゅまろ制作の脱出マップに登場するオリジナルキャラの設定などを紹介しています
@@ -57,6 +72,23 @@
           <option value="19th">猫橋水河</option>
           <option value="20th">願来冷紗</option>
           <option value="21th">依神手々</option>
+          <option value="22th">魅楽理凛</option>
+          <option value="23th">柊霞</option>
+          <option value="24th">アルビノ</option>
+          <option value="25th">ジオ</option>
+          <option value="26th">カルミア</option>
+          <option value="27th">陽樹/伊月</option>
+          <option value="28th">エミ</option>
+          <option value="29th">エラ</option>
+          <option value="30th">琥珀</option>
+          <option value="31th">寧夢</option>
+          <option value="32th">ダイナ</option>
+          <option value="33th">レラララ</option>
+          <option value="34th">オーダー</option>
+          <option value="35th">イディオット</option>
+          <option value="36th">主人公（LostMercy）</option>
+          <option value="37th">リバ</option>
+          <option value="38th">メルピナ</option>
         </select>
       </div>
 
